<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.salvador.aboutme.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/foto"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/text_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_nombre"
        android:textColor="@color/ColorTextoPrim"
        android:textSize="24sp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/text_carrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_carrera"
        android:textColor="@color/ColorTextoPrim"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_fb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/fb"
            />
        <TextView
            android:id="@+id/text_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_fb"
            android:layout_toEndOf="@id/image_fb"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/ColorTextoPrim"
            android:textSize="12sp"
            android:text="@string/text_fb"/>

        <ImageView
            android:id="@+id/image_git"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/github"
            android:layout_toRightOf="@id/text_face"
            android:layout_toEndOf="@id/text_face"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:id="@+id/text_git"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_git"
            android:layout_toEndOf="@id/image_git"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/ColorTextoPrim"
            android:textSize="12sp"
            android:text="@string/text_github"/>

        <ImageView
            android:id="@+id/image_wp"
            android:layout_below="@id/image_fb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/wp"/>
        <TextView
            android:id="@+id/text_wp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/ColorTextoPrim"
            android:layout_toRightOf="@id/image_wp"
            android:layout_toEndOf="@id/image_wp"
            android:layout_below="@id/text_face"
            android:text="@string/text_number"
            android:textSize="12sp"
            />

        <ImageView
            android:id="@+id/image_gm"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/gmail"
            android:layout_below="@id/image_git"
            android:layout_alignStart="@id/image_git"
            android:layout_alignLeft="@id/image_git"
            />
        <TextView
            android:id="@+id/text_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_gm"
            android:layout_toEndOf="@id/image_gm"
            android:layout_below="@id/text_git"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="12sp"
            android:text="@string/text_correo"
            android:textColor="@color/ColorTextoPrim"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/botonShare"
        android:onClick="compartir"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:src="@drawable/compartir" />

    <TextView
        android:id="@+id/text_power"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="@color/ColorTextoPrim"
        android:text="@string/text_bottom"/>

</LinearLayout>
